compiler/tests/fail/arm-m4/intrinsic_smlalS.jazz
export
fn smlal(reg u32 arg0, reg u32 arg1) -> reg u32 {
    reg u32 x, y;
    ?{}, x, y = #SMLALS(x, y, arg0, arg1);
    reg u32 res;
    res = x;
    return res;
}
